--- a/BaoCaoDoanhSo.resx
+++ b/BaoCaoDoanhSo.resx
@@ -132,4 +132,81 @@
   <metadata name="TiLe.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAABAAABMLAAATCwAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAANDQ0ADQ0NBQzMzN6NDQ0pzQ0NKY0NDSmOjk4pnFo
+        XaZ9cWSmenBjpktHQ6YyMzOmNDQ0pjQ0NKY0NDSmNDQ0pjQ0NKY0NDSmMjMzpktHQ6Z6cGOmfXFkpnFo
+        XaY6OTimNDQ0pjQ0NKY0NDSnMzMzeTQ0NBQ0NDQAAAAAAAAAAAAzMzMAMzMzTTQ0NPY0NDT/NDQ0/zQ0
+        NP87Ojj/dGtg/3txZP97cWT/S0hF/zAyM/8yMzT/MjM0/zIzNP8yMzT/MjM0/zIzNP8wMjP/S0hF/3tx
+        ZP97cWT/dGtg/zs6OP80NDT/NDQ0/zQ0NP80NDT2MzMzTTMzMwAAAAAAAAAAADQ0NAA0NDRZNDQ0/zQ0
+        NP80NDT/MzQ0/z88N/+uhE//yZJO/8iSTv+4hEP/rnw9/699Pv+vfT7/r30+/65+Pv+ufj7/rn4+/6x9
+        Pf+2hEP/xpJO/8aTTv+rhE//Pzw3/zM0NP80NDT/NDQ0/zQ0NP80NDRZNDQ0AAAAAAAAAAAANDQ0ADQ0
+        NFk0NDT/NDQ0/zQ0NP8zMzT/RT41/9+YQP/1pUH/9KRA//SlQv/0pkL/750//+qXO//qlzv/6Zg7/+mY
+        Ov/snz3/8adC//GmQv/vpUD/8KZB/9qZQP9FPjX/MzM0/zQ0NP80NDT/NDQ0/zQ0NFk0NDQAAAAAAAAA
+        AAA0NDQANDQ0WTQ0NP80NDT/NDQ0/zMzNP9GPjX/35lB//OnSP/yqU//8aVF/+2eQP/cgjP/1Hkt/9N5
+        LP/Teiv/0noq/9mFL//qnz7/7qVF/+6qT//up0j/25lB/0U+Nf8zMzT/NDQ0/zQ0NP80NDT/NDQ0WTQ0
+        NAAAAAAAAAAAADQ0NAA0NDRZNDQ0/zQ0NP80NDT/MzM0/0Y+Nf/fmD//+MyV//zs1//zuGv/65o8/+CJ
+        N//eiDX/3Yg0/92JNP/ciTP/3Ywz/+icO//xuGv/++zY//XNlf/bmT//RT41/zMzNP80NDT/NDQ0/zQ0
+        NP80NDRZNDQ0AAAAAAAAAAAANDQ0ADQ0NFk0NDT/NDQ0/zQ0NP8zMzT/RD41/9mUP//4zJX//OzY//O3
+        a//woj//76NC/++jQv/vo0L/7qRC/+6kQv/upEL/7aM///G4a//77dj/9c2V/9SVP/9EPjX/MzM0/zQ0
+        NP80NDT/NDQ0/zQ0NFk0NDQAAAAAAAAAAAA0NDQANDQ0WTQ0NP80NDT/NDQ0/zMzNP85NzT/qXk9//Km
+        SP/yqU//8KRF//CjQv/vo0L/76NC/++jQv/upEL/7qRC/+6kQv/tpEL/7aVF/+6qT//tp0j/pnk9/zk3
+        NP8zMzT/NDQ0/zQ0NP80NDT/NDQ0WTQ0NAAAAAAAAAAAADQ0NAA0NDRZNDQ0/zQ0NP8yMzT/Vkg2/6h3
+        PP/LjD//76BB/+KNNv/eiDX/3og1/96INf/eiDX/3og1/96JNf/eiTX/3ok1/92JNf/diDX/3402/+qh
+        QP/HjT//o3g8/1VINv8yMzT/NDQ0/zQ0NP80NDRZNDQ0AAAAAAAAAAAANDQ0ADQ0NFk0NDT/NDQ0/zAx
+        NP90Wjn/96ZC//CjQv/ZlED/2oU0/9R5Lf/UeS3/1Hkt/9R5Lf/UeS3/1Hkt/9R5Lf/UeS3/1Hkt/9R5
+        Lf/YhTT/1JQ//+ukQv/wp0L/clo5/zAxNP80NDT/NDQ0/zQ0NFk0NDQAAAAAAAAAAAA0NDQANDQ0WTQ0
+        NP80NDT/MzM0/0lANv92Wzn/cFc4/41oOv/bizf/1Hot/9R6Lf/Uei3/1Hot/9R6Lf/Uei3/1Hot/9R6
+        Lf/Uei3/1Hot/9mMOP+KaDv/blc5/3NaOf9IQDb/MzM0/zQ0NP80NDT/NDQ0WTQ0NAAAAAAAAAAAADQ0
+        NAA0NDRZNDQ0/zQ0NP80NDT/MzM0/zAxNP8vMTT/WEk3/9qPOv/WfS3/1Hss/9R7LP/Ueyz/1Hss/9R7
+        LP/Ueyz/1Hss/9R7LP/WfS3/1487/1ZJN/8vMTT/MDE0/zMzNP80NDT/NDQ0/zQ0NP80NDRZNDQ0AAAA
+        AAAAAAAANDQ0ADQ0NFk0NDT/NDQ0/zQ0NP80NDT/NDQ0/zM0NP9CPDX/wIQ7/9+IMv/agS7/2oEu/9qB
+        Lv/agS7/2oEu/9qBLv/agS7/2oEu/96IMv+9hDv/QTw1/zM0NP80NDT/NDQ0/zQ0NP80NDT/NDQ0/zQ0
+        NFk0NDQAAAAAAAAAAAA0NDQANDQ0WTQ0NP80NDT/NDQ0/zQ0NP80NDT/NDQ0/zQ0NP9iTzj/o3Q7/6x5
+        O/+reTv/q3k7/6t5O/+reTv/q3k7/6t5O/+qeTv/oXQ7/2FPN/80NDT/NDQ0/zQ0NP80NDT/NDQ0/zQ0
+        NP80NDT/NDQ0WTQ0NAAAAAAAAAAAADQ0NAA0NDRZNDQ0/zQ0NP80NDT/NDQ0/zQ0NP80NDT/NDQ0/zM0
+        NP8yMzT/MjM0/zIzNP8yMzT/MjM0/zIzNP8yMzT/MjM0/zIzNP8yMzT/MzQ0/zQ0NP80NDT/NDQ0/zQ0
+        NP80NDT/NDQ0/zQ0NP80NDRZNDQ0AAAAAAAAAAAANDQ0ADQ0NFk0NDT/NDQ0/zQ0NP80NDT/NDQ0/zQ0
+        NP80NDT/NDQ0/zQ0NP80NDT/NDQ0/zQ0NP80NDT/NDQ0/zQ0NP80NDT/NDQ0/zQ0NP80NDT/NDQ0/zQ0
+        NP80NDT/NDQ0/zQ0NP80NDT/NDQ0/zQ0NFk0NDQAAAAAAAAAAAAwMjQAMDI0WTAyNP8wMjT/MDI0/zAy
+        NP8wMjT/MDI0/zAyNP8wMjT/MDI0/zAyNP8wMjT/MDI0/zAyNP8wMjT/MDI0/zAyNP8wMjT/MDI0/zAy
+        NP8wMjT/MDI0/zAyNP8wMjT/MDI0/zAyNP8wMjT/MDI0WTAyNAAAAAAA1nkwAOV/MCqWXjKSbEwy/2xM
+        Mv9sTDL/bEwy/2xMMf9sTDL/bEwy/2xMMf9sTDL/bEwy/2tMMf9rTDH/a0wx/2tMMP9rTDD/a0ww/2xN
+        Mf9rTTH/a0ww/2tNMf9rTTH/a0ww/2tNMf9rTTH/a00x/2tNMf+UXy2S4IInKtJ8KQDWeTAA1nkwm9Z5
+        MP/Xei//13ov/9Z6L//XfjT/2YM8/9Z8L//WfC//2YM8/9d+M//Wey3/2IE3/9qHQf/ah0H/2ohA/9qI
+        QP/Ygjb/1Xwr/9Z/MP/YhDn/1H0s/9R9LP/YhDj/1X8v/9R9Kv/TfSr/030q/9J8Kf/SfCmb0nwpANZ5
+        MADWeTCm1nkw/9Z5L//WeS//1Xcs/9+bYv/w0LT/2II7/9iCO//w0LT/35th/9R3KP/oupL/+/Ts//v0
+        7f/79O3/+/Ps/+i6kP/TeCf/3pxg/+/Qs//Wgzj/1oM4/+/Qs//em17/0non/9J8Kv/SfCr/0nwp/9J8
+        KabSfCkA1nkwANZ5MKXWeTD/1nkv/9Z5L//VeC7/2YZC/9+aYf/WfTP/1n0z/9+aYP/ZhkH/1Hkr/9yS
+        U//jqHX/46h1/+Oodf/jqHX/3JNS/9R6Kv/Xhz//3pte/9R+MP/UfjD/3pte/9eHPv/Teyn/0nwq/9J8
+        Kv/SfCn/0nwppdJ8KQDWeTAA1XgvWtZ5MKbWeS+m1nkvptV5L6bVeC2m1HYpptV6LabVei2m1HYpptV5
+        LKbVei2m03cpptJ1JqbSdSam0nYlptJ2JabTeCim1HssptN6KabSdyam03sqptN7KqbSdyWm03ooptN8
+        KqbSfCqm0nwqptJ8KabSfChZ0nwpAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA////////////////wAAAA8AAAAPAAAADwAAAA8AAAAPAAAADwAAAA8AA
+        AAPAAAADwAAAA8AAAAPAAAADwAAAA8AAAAPAAAADwAAAA8AAAAOAAAABgAAAAYAAAAGAAAABgAAAAf//
+        //////////////////////////////////8=
+</value>
+  </data>
 </root>
